# nixshell-cpp23-stdmodule

./: .gitignore  CMakeLists.txt  README.md  hello-world.cpp
nix/: flake.nix  shell.nix
nix/cmake-importstd-patched/: package.nix
